[gd_scene load_steps=3 format=2]

[ext_resource path="res://Resources/Themes/BaseTheme.tres" type="Theme" id=1]
[ext_resource path="res://UI/NetworkSetup.gd" type="Script" id=2]

[node name="NetworkSetup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="MultiplayerConfigure" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CreateServerBtn" type="Button" parent="MultiplayerConfigure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -257.0
margin_top = -341.0
margin_right = 257.0
margin_bottom = -211.0
theme = ExtResource( 1 )
text = "Create Server"

[node name="JoinServerBtn" type="Button" parent="MultiplayerConfigure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -257.0
margin_top = -168.0
margin_right = 257.0
margin_bottom = -46.0
theme = ExtResource( 1 )
text = "Join Server"

[node name="ServerIPAddressTxt" type="LineEdit" parent="MultiplayerConfigure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -257.0
margin_top = -1.0
margin_right = 257.0
margin_bottom = 140.0
theme = ExtResource( 1 )
placeholder_text = "Enter IP Address"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DeviceIPAddressLbl" type="Label" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -118.0
theme = ExtResource( 1 )

[connection signal="pressed" from="MultiplayerConfigure/CreateServerBtn" to="." method="_on_CreateServerBtn_pressed"]
[connection signal="pressed" from="MultiplayerConfigure/JoinServerBtn" to="." method="_on_JoinServerBtn_pressed"]
